[package]
name = "spacedogs"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.2", features = ["bevy_debug_stepping", "dynamic_linking"] }
bevy-parallax = { git = "https://github.com/Corrosive-Games/bevy-parallax"}
rand = "0.9.0"

# Enable a small amount of optimization in the dev profile.
[profile.release]
opt-level = 3

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
